Add simple error handling for invoices

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "next build",
     "dev": "next dev --turbopack",
     "start": "next start",
-    "postinstall": "npm rebuild bcrypt --build-from-source"
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
